[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[project]
name = "opengrid-build123"
version = "0.1.0"
description = "build123d conversion of the parametric openGrid generator"
requires-python = ">=3.13,<3.15"
dependencies = [
    "build123d @ git+https://github.com/gumyr/build123d",
    "ocp-vscode>=3.4.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
opengrid-build123 = "opengrid_build123.opengrid:main"

[dependency-groups]
dev = [
    "basedpyright>=1.39.5",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = ["-n", "2"]
filterwarnings = [
    "ignore:Due to '_pack_', the '.*' Structure will use memory layout compatible with MSVC \\(Windows\\).*:DeprecationWarning:lib3mf\\.Lib3MF",
]
[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false
